[package]
name = "battlemon_screener"
version = "0.1.0"
edition = "2021"

[dependencies]
thirtyfour = "0.28.1"
tokio = { version = "1.17.0", features = ["fs"] }
actix-web = "4.0.1"
serde = { version = "1.0.136", features = ["derive"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
ipfs-api-backend-hyper = "0.3.0"
mime = "0.3.16"
serde_json = "1.0.79"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"